--- a/style.css
+++ b/style.css
@@ -11,13 +11,35 @@ body{
 .container{
     display: flex;
     flex-direction: row;
-    
+    justify-content: space-between;
     width: 80%;
     height: 650px;
 
     border: solid;
 }
-img{
+.container-inputs{
+    width: 50%;
+}
+.img{
+    
     width: 450px;
     height: 450px;
+background-image: URL('IMG/1.png');
+background-size: cover;
+
+}
+.linha {
+width: 35px;
+height: 35px;
+ border: 2px solid;
+ 
+}
+.container-linha{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 25px;
+    margin-top: 25px;
+    
+
 }
