--- a/style.css
+++ b/style.css
@@ -17,7 +17,11 @@ body{
 
     border: solid;
 }
-.container-inputs{
+.container-game{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 50%;
 }
 .img{
@@ -37,9 +41,28 @@ height: 35px;
 .container-linha{
     display: flex;
     flex-direction: row;
+    
     width: 100%;
     height: 25px;
     margin-top: 25px;
     
 
+}
+.container-linha div{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+.lista-letras{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    width: 270px;
+    height: 270px;
+    
+}
+.lista-letras div button{
+ width: 50px;
+ height: 50px;
+    
 }
