--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-body{
+
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
-.container{
+
+.container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -17,52 +19,72 @@ body{
 
     border: solid;
 }
-.container-game{
+
+.container-game {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 50%;
 }
-.img{
-    
+
+.img {
+
     width: 450px;
     height: 450px;
-background-image: URL('IMG/1.png');
-background-size: cover;
+    background-image: URL('IMG/1.png');
+    background-size: cover;
 
 }
+
 .linha {
-width: 35px;
-height: 35px;
- border: 2px solid;
- 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45px;
+    height: 45px;
+    border: 2px solid;
+
+    font-size: 45px;
+
 }
-.container-linha{
+
+.container-linha {
     display: flex;
     flex-direction: row;
-    
+    justify-content: center;
     width: 100%;
-    height: 25px;
-    margin-top: 25px;
-    
+    height: auto;
+
+
+
+
 
 }
-.container-linha div{
+
+.container-linha div {
     display: flex;
     flex-direction: row;
     gap: 10px;
 }
-.lista-letras{
+
+.lista-letras {
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
     width: 270px;
     height: 270px;
-    
+
 }
-.lista-letras div button{
- width: 50px;
- height: 50px;
-    
+
+.lista-letras div button {
+    width: 50px;
+    height: 50px;
+
+}
+
+.container-forca {
+    display: flex;
+    flex-direction: column;
+
 }
